[package]
name = "lite-llm-inference"
version = "0.1.0"
edition = "2021"
description = "Lite LLM inference runtime skeleton for TierSet selection and routing pipelines."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/lite-llm/lite-llm-inference"
authors = ["Lite LLM Developers <litellm@dust.llc>"]
rust-version = "1.70"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
